--- a/main.ipynb
+++ b/main.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3, 7, 9, 7, 4], [8, 0, 9, 9, 0], [4, 9, 6, 3, 4], [9, 2, 4, 3, 4], [0, 7, 8, 9, 10], [0, 2, 0, 8, 4], [8, 3, 2, 1, 0], [5, 4, 7, 9, 6], [9, 8, 4, 4, 3], [0, 4, 9, 9, 10]]\n",
-      "[[6, 5], [5, 9], [5, 6]]\n"
+      "[[1, 1, 1, 0, 0], [0, 1, 1, 1, 0], [0, 0, 1, 1, 1], [0, 0, 1, 1, 0], [0, 1, 1, 0, 0]]\n",
+      "[[1, 0, 1], [0, 1, 0], [1, 0, 1]]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +77,52 @@
     "arrO = convolution(arrI, arrK)\n",
     "write_array(arrO, \"test/output.txt\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate\n",
+    "    Code: model\n",
+    "    Skill: train, evaluate, tune hyper-params (bsz, lr, op)\n",
+    "Submit: 14/12\n",
+    "    Code (github)\n",
+    "    Data (if collect)\n",
+    "    Report\n",
+    "        1. Who did what\n",
+    "        2. Model\n",
+    "        3. Results\n",
+    "\n",
+    "Final exam: 16/12\n",
+    "    Demo\n",
+    "    Q & A\n",
+    "\n",
+    "Architecture\n",
+    "\n",
+    "1.MLLP\n",
+    "2.CNN\n",
+    "3.RNN\n",
+    "4.LSTM\n",
+    "5.Transformers\n",
+    "\n",
+    "-Data provided datasets; or collect andprocess by yourself (rec)\n",
+    "    -Provided: image, text, clalssification, generation, etc(TBA)\n",
+    "    -Collect: not limited, for example:\n",
+    "        -FB post -> sentiment\n",
+    "        -YT\n",
+    "        -Image -> classification, captioning\n",
+    "        -Online shopping website -> senntiment\n",
+    "        -Website (vnexpress) -> classification\n",
+    "        -Wikipeadia -> classification, named enity\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
